fixed the sizing and layout issue on buttons and images on homepage

--- a/client/src/pages/GamePage/GamePage.scss
+++ b/client/src/pages/GamePage/GamePage.scss
@@ -2,15 +2,17 @@
 .gamepage {
     background-image: url('../../assets/images/gamepagebg.webp');
     background-size: cover;
+    display: flex;
+    padding: 1rem;
     height: 100vh;
 
-    display: flex;
     &__link {
-        display: inline;
+        
+
     }
 
     &__back-button {
-        width: 3rem;
+        width: 4rem;
         height: auto;
         object-fit: cover;
     }
